Initial web header

--- a/Omnifoods/index.html
+++ b/Omnifoods/index.html
@@ -10,7 +10,13 @@
     <body>
         
         <div class="row">
-            <h1>Omni Food</h1>
+            <header>
+                <div class="first-box">
+                    <h1>Goodbye junk food!<br> Hello super healthy meal</h1>
+                    <a href="#">I'm Hungry!</a>
+                    <a href="#">Show me more</a>
+                </div>
+            </header>
         </div>
         
     </body>
