--- a/Omnifoods/index.html
+++ b/Omnifoods/index.html
@@ -11,10 +11,10 @@
         
         <div class="row">
             <header>
-                <div class="first-box">
+                <div class="hero-box">
                     <h1>Goodbye junk food!<br> Hello super healthy meal</h1>
-                    <a href="#">I'm Hungry!</a>
-                    <a href="#">Show me more</a>
+                    <a class="btn btn-full" href="#">I'm Hungry!</a>
+                    <a class="btn btn-ghost" href="#">Show me more</a>
                 </div>
             </header>
         </div>
