--- a/Omnifoods/index.html
+++ b/Omnifoods/index.html
@@ -8,9 +8,24 @@
     </head>
     
     <body>
-        
-        <div class="row">
-            <header>
+            <header class>
+                <nav class="row">
+                    <img src="resources/images/logo-white.png" class="image-logo" alt="whiteOmniImage"/>
+                    <ul class="navigation">
+                        <li>
+                            <a href="#">Food delivery</a>
+                        </li>
+                        <li>
+                            <a href="#">How it works</a>
+                        </li>
+                        <li>
+                            <a href="#">Our cities</a>
+                        </li>
+                        <li>
+                            <a href="#">Sign up</a>
+                        </li>
+                    </ul>
+                </nav>
                 <div class="hero-box">
                     <h1>Goodbye junk food!<br> Hello super healthy meal</h1>
                     <a class="btn btn-full" href="#">I'm Hungry!</a>
